--- a/cart.html
+++ b/cart.html
@@ -11,26 +11,30 @@
 <body>
     <div id="nav-placeholder"></div>
     <div class="container-fluid">
-        <div class="row g-5">
+      <div class="breadcrumb"><a href="/">Home</a><span class="sep"> > </span>Your Cart</div>
+        <h1>Your Cart</h1>
+        <div class="row">
             <div class="col-md-6 order-md-last">
               <h4 class="d-flex justify-content-between align-items-center mb-3">
                 <span class="text-primary">Your cart</span>
                 <span class="cartCount badge bg-primary rounded-pill"></span>
               </h4>
-              <ul class="list-group mb-3 cartDisplay">
-                <li class="list-group-item d-flex justify-content-between lh-sm">
-                  <div>
-                    <h6 class="my-0">Product name</h6>
-                    <small class="text-muted">Brief description</small>
-                  </div>
-                  <span class="text-muted">$12</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between">
-                  <span>Total (USD)</span>
-                  <strong>$<span class="price"></span></strong>
-                </li>
-              </ul>
-      
+              <table class="table cartDisplay">
+                <thead>
+                  <tr>
+                    <th>Qty</th>
+                    <th colspan="2">Product</th>
+                    <th class="text-end">Total</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="3">Total (USD)</td>
+                    <td class="text-end"><strong>$<span class="price"></span></strong></td>
+                  </tr>
+                </tfoot>
+              </table> 
               <form class="card p-2">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Promo code">
